@@ -78,7 +78,7 @@ The release script tags the release and uploads it:
     Question: Check out the tag
         (for tweaks or pypi/distutils server upload) (Y/n)?
     Our reply: y
-    Note: moving to '0.1' which isn't a local branch
+    Note: ...0.1...
     ...
     HEAD is now at ...
     Preparing release 0.1
